--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@ ErrorDocument 404 http://codinghobby.epizy.com/portfolio/Digital%20Portfolio/404
 
 RewriteEngine On
 RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
-RewriteCond %{HTTPS} off
+RewriteCond %{HTTPS} on
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
